# inject-hook-linux

./: README.md
inject-hook-linux/: CMakeLists.txt  LICENSE  README.md  inject-x86_64.c  inject.h  inject_arm64.c  ptrace.c  ptrace.h  utils.c  utils.h
inject-hook-linux/hook/: CMakeLists.txt  dump.cpp  hook.cpp  hook_main.cpp  log.c  plthook_elf.c
inject-hook-linux/hook/include/: hook.h  linker.h  plthook.h  report.h
inject-hook-linux/hook/io/: io.cpp  report.cpp
inject-hook-linux/include/: log.h  ndklog.h
inject-hook-linux/inject/: CMakeLists.txt
